--- a/ftp-root/.footer.html
+++ b/ftp-root/.footer.html
@@ -1,29 +1,34 @@
 <div id="footer" class="container-fluid p-1">
     <div class="d-flex py-2" id="ButtonBar">
         <div class="pr-4"><button class="btn-sm" id="Refresh">刷新</button></div>
-        <div class="pr-2"><button class="btn-sm btn-primary" id="Upload">上传</button></div>
+        <div class="pr-2"><button class="btn-sm btn-primary" id="Upload" data-toggle="collapse" data-target="#UploadForm">上传</button></div>
         <div class="pr-2"><button class="btn-sm btn-success" id="Newfolder">新建文件夹</button></div>
         <div class="pr-2"><button class="btn-sm btn-primary" id="Rename">重命名</button></div>
         <div class="pl-4"><button class="btn-sm btn-danger" id="Delete">删除</button></div>
     </div>
 
-    <form action="" method="post" hidden>
-        <div class="d-flex-row input-group p-2" id="CheckAuthority" hidden>
+    <form action="/query" method="post">
+        <div class="d-flex-row input-group p-3" id="CheckAuthority" hidden>
             <div class="input-group-prepend p">
                 <span class="input-group-text">密码</span>
             </div>
             <div><input type="password" class="form-control" name="password"></div>
         </div>
 
-        <div class="d-flex-row input-group p-2" id="UploadForm" hidden>
-            <div class="input-group-prepend">
-                <label for="InputUpload">
-                    <span class="input-group-text">选择文件</span>
-                </label>
+        <div class="container-fluid collapse" id="UploadForm">
+            <div class="d-flex-row input-group py-2">
+                <div class="input-group-prepend">
+                    <label for="InputUpload">
+                        <span class="input-group-text">选择文件</span>
+                    </label>
+                </div>
+                <div class="col-sm-4 custom-file">
+                    <input type="file" class="custom-file-input" id="InputUpload" name="upload">
+                    <label class="custom-file-label InputUpload" for="InputUpload"></label>
+                </div>
             </div>
-            <div class="col-sm-4 custom-file">
-                <input type="file" class="custom-file-input" id="InputUpload" name="file">
-                <label class="custom-file-label" for="InputUpload"></label>
+            <div class="py-2">
+                <button type="submit" class="btn btn-large btn-primary" value="uploadfile">提交</button>
             </div>
         </div>
 
@@ -39,7 +44,7 @@
             </div>
         </div>
 
-        <div class="py-2">
+        <div class="py-2" hidden>
             <button type="submit" class="btn btn-large btn-primary">提交</button>
         </div>
 
@@ -47,34 +52,54 @@
 
 </div>
 
+<div class="file-loading">
+    <input id="input-fa" name="input-fa[]" type="file" multiple>
+</div>
+
+
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link href="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/css/fileinput.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/js/fileinput.min.js"></script>
+<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/themes/fa/theme.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/js/locales/zh.min.js"></script>
+
 <script>
-    $(document).ready(function(){
+$(document).ready(function(){
+    var path = decodeURI(window.location.pathname);
+    var user = decodeURI(window.location.pathname.split("/")[1]);
 
-        $("button").click(function(){
-            if ($(this).attr("id") == "Refresh"){window.location.reload();return;}
-            $("form").removeAttr("hidden");
+    console.log(path);
+    $("#input-fa").fileinput({
+        language:"zh",
+        theme: "fa",
+        uploadUrl: "/query",
+        uploadExtraData:{"path": path, "user" : user},
+});
 
-            switch ($(this).attr("id")){
-                case "Upload":
-                $("#UploadForm").removeAttr("hidden");
+    $("button").click(function(){
+        if ($(this).attr("id") == "Refresh"){window.location.reload();return;}
+        $("form").removeAttr("hidden");
+        $("#CheckAuthority").removeAttr("hidden");
 
-                case "Newfolder":
+        switch ($(this).attr("id")){
+            case "Upload":
 
+            case "Newfolder":
 
+            case "Rename":
 
-                case "Rename":
+            case "Delete":
 
-                case "Delete":
+        }
 
-            }
-
-            console.log("End");
-
-        });
-
+        console.log("End");
 
     });
+
+
+});
 </script>
 
 </body></html>
