--- a/ftp-root/.footer.html
+++ b/ftp-root/.footer.html
@@ -56,8 +56,9 @@
 
 
 
-
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script>$(document).ready(function(){$("table").addClass("table table-striped");});</script>
+
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link href="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/css/fileinput.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/js/fileinput.min.js"></script>
@@ -67,7 +68,6 @@
 
 <script>
 $(document).ready(function(){
-    $("table").addClass("table table-striped");
     var path = decodeURI(window.location.pathname);
     var user = decodeURI(window.location.pathname.split("/")[1]);
     var login = 0;
