--- a/ftp-root/.footer.html
+++ b/ftp-root/.footer.html
@@ -57,7 +57,12 @@
 
 
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-<script>$(document).ready(function(){$("table").addClass("table table-striped");});</script>
+<script>
+$(document).ready(function(){
+    $("table").addClass("table table-striped");
+    $("body").removeAttr("hidden");
+});
+</script>
 
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link href="https://cdn.bootcss.com/bootstrap-fileinput/4.5.1/css/fileinput.min.css" rel="stylesheet">
